# khan-placement-agency

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SPEC.md
api/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
api/data/: sample_jobs.json
api/data/parse_eval/: 000_README.md  001-priya-software-engineer.expected.json  001-priya-software-engineer.txt  002-arjun-data-scientist.expected.json  002-arjun-data-scientist.txt  003-divya-frontend-dev.expected.json  003-divya-frontend-dev.txt  004-rohan-fresher.expected.json  004-rohan-fresher.txt  005-sneha-product-manager.expected.json  005-sneha-product-manager.txt  006-vikram-devops-lead.expected.json  006-vikram-devops-lead.txt  007-aisha-mobile-dev.expected.json  007-aisha-mobile-dev.txt  008-karthik-ml-engineer.expected.json  008-karthik-ml-engineer.txt
api/src/kpa/: __init__.py  app_factory.py  main.py  settings.py
api/tests/: conftest.py
api/tests/eval/: test_parse_f1_gate.py
api/tests/integration/: conftest.py  test_admin_audit_logs.py  test_admin_suspend.py  test_applications_list.py  test_apply.py  test_apply_dispatches_notifications.py  test_audit_logs.py  test_auth_logout.py  test_auth_refresh.py  test_auth_signin.py  test_consents_routes.py  test_dispatch_resilient.py  test_dsr_export.py  test_embed_job_worker.py  test_embed_worker.py  test_employers_create.py  test_employers_me.py  test_feed.py  test_grant_admin_cli.py  test_job_detail.py  test_jobs_create_recruiter.py  test_jobs_delete.py  test_jobs_id_applicants.py  test_jobs_me_listing.py  test_jobs_patch.py  test_llm_explainer_wiring.py  test_me.py  test_migrations.py  test_models.py  test_notifications_inbox.py  test_parse_pipeline.py  test_parse_task.py  test_profile_update.py  test_ready.py  test_recruiter_resume_download.py  test_resumes_auth.py  test_resumes_list.py  test_resumes_upload.py  test_save_unsave.py  test_score_applicant_worker.py  (+7 more)
api/tests/unit/: conftest.py  test_auth_dependencies.py  test_canonicalize.py  test_canonicalize_job.py  test_employer_validators.py  (+23 more)
(+365 files in other folders)
