[project]
name = "kpa-api"
version = "0.1.0"
description = "Khan Placement Agency API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2",
    "anyio>=4,<5",
    "asyncpg>=0.30,<0.31",
    "celery[redis]>=5.5,<6",
    "fastapi>=0.115,<0.116",
    "google-genai>=1.0,<2",
    "httpx>=0.27,<0.28",
    "pdfminer.six>=20240706,<20270101",
    "pgvector>=0.3.0,<0.4",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "pyjwt[crypto]>=2.10.1,<3",
    "pypdf>=5,<6",
    "python-docx>=1.1,<2",
    "python-multipart>=0.0.12,<0.1",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "structlog>=24.4,<25",
    "uvicorn[standard]>=0.32,<0.33",
]

[project.scripts]
kpa-seed-jobs = "kpa.scripts.seed_jobs:main"
kpa-seed-consents = "kpa.scripts.seed_consents:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    "fpdf2>=2.7,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kpa"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/kpa"]
exclude = ["src/kpa/db/migrations"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google", "google.genai", "google.genai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pgvector", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that require a running local Postgres (see README §Database)",
]
